service/k3s/templates/traefik_test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: containous/whoami
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
  labels:
    app: whoami
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: whoami
  selector:
    app: whoami
---
# Serve global default cert i.e. self-signed-cert
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: test
  namespace: whoami
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`test.${domain}`)
      kind: Rule
      services:
        - name: whoami
          port: 80
---
# Serve letsencrypt test certificate i.e. test-http01-cert
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: whoami
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`whoami.${domain}`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls:
    secretName: test-http01-cert
---
# Serve letsencrypt live/valid certificate i.e. live-http01-cert
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`dash.${domain}`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: live-http01-cert
---
# Use PassThrough TLS
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kube-api
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`kube-api.${domain}`)
      kind: Rule
      services:
        - name: kubernetes
          port: 443
  tls:
    passthrough: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: k8dash
  namespace: kube-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`k8dash.${domain}`)
      kind: Rule
      services:
        - name: k8dash
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`k8dash.${domain}`) && PathPrefix(`/main`)
    kind: Rule
    middlewares:
    - name: basic-auth
    services:
    - name: kubernetes-dashboard
      port: 80
  - match: Host(`k8dash.${domain}`)
    kind: Rule
    services:
    - name: kubernetes-dashboard
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
spec:
  basicAuth:
    secret: traefik
    headerField: X-WebAuth-User
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: kube-system
spec:
  basicAuth:
    secret: traefik
    removeHeader: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: kubernetes-dashboard
spec:
  basicAuth:
    secret: traefik
    removeHeader: true
%{ if create_certs == true }
